se hace prueba de despliegue

--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -15,9 +15,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render 'includes/menu' %>
+<%#= render 'includes/menu' %>
 <%= yield %>
-<%= render 'includes/footer' %>
+<%#= render 'includes/footer' %>
 
 
 
