se coloca la paginacion en un partial para que pueda ser manipulado por todos solo diseño

--- a/app/views/pages/camiontipo.html.erb
+++ b/app/views/pages/camiontipo.html.erb
@@ -84,17 +84,7 @@
 
 
           </div><!-- /.tab-content -->
-          <div class="clearfix filters-container">
-            <div class="text-right">
-              <div class="pagination-container">
-
-
-
-
-
-              </div><!-- /.pagination-container -->						    </div><!-- /.text-right -->
-
-          </div><!-- /.filters-container -->
+<%= render partial: '/includes/paginator' %>
 
         </div><!-- /.search-result-container -->
 
