--- a/app/views/includes/_menu.erb
+++ b/app/views/includes/_menu.erb
@@ -73,133 +73,8 @@
         </a></div><!-- /.logo -->
       </div>
 
-      <div class="col-xs-12 col-sm-12 col-md-12">
+      <%= render partial: 'includes/modal_search' %>
 
-        <div class="product-tabs outer-top-smal  wow fadeInUp">
-          <ul id="product-tabs" class="nav nav-tabs nav-tab-cell-detail">
-            <li class="active"><a data-toggle="tab" href="#camiones">ENCUENTRA TU CAMIÓN</a></li>
-            <li><a data-toggle="tab" href="#repuestos">REPUESTOS</a></li>
-            <li><a data-toggle="tab" href="#servicios">SERVICIOS</a></li>
-          </ul><!-- /.nav-tabs #product-tabs -->
-          <div class="tab-content outer-top-xs">
-            <div id="camiones" class="tab-pane in active">
-              <div class="product-tab sty-tabsh">
-
-                  <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
-
-                  <div class="col-xs-3 col-sm-3 col-md-3"><fieldset class="attribute_fieldset">
-                  <label for="group_1" class="attribute_label attribute-key"><p>TIPO DE <b>CAMIÓN</b></p></label>
-                  <div class="attribute_list">
-
-                    <%= select :camion,:type, options_for_select(@types.map{ |c| [c.name, c.link_rewrite, {'data-id'=>c.id}] }), {prompt: 'Todas las marcas'}, :class=>'form-control' %>
-                  </div> <!-- /.attribute_list -->
-                </fieldset></div>
-
-                <div class="col-xs-3 col-sm-3 col-md-3"><fieldset class="attribute_fieldset">
-                  <label for="group_1" class="attribute_label attribute-key"><p>MARCAS</p></label>
-                  <div class="attribute_list">
-                    <%= collection_select(:camion, :brand, BrandTruck.order(:name), :link_rewrite, :name, {prompt: 'Todas las marcas'}, :class=>'form-control') %>
-
-
-
-                  </div> <!-- /.attribute_list -->
-                </fieldset></div>
-
-                <div class="col-xs-3 col-sm-3 col-md-3"><fieldset class="attribute_fieldset">
-                  <label for="group_1" class="attribute_label attribute-key"><p>UBICACIÓN</p></label>
-                  <div class="attribute_list">
-                    <%= collection_select(:camion, :state, State.order(:id), :link_rewrite, :name, {prompt: 'Selecciona'}, :class=>'form-control') %>
-                  </div> <!-- /.attribute_list -->
-                </fieldset></div>
-
-                <div class="col-xs-3 col-sm-3 col-md-3"><fieldset class="attribute_fieldset">
-                  <label for="group_1" class="attribute_label attribute-key">&nbsp;</label>
-                  <div class="attribute_list pull-right" style="width: 100%;">
-                    <button id='btn-camion' class="btn btn-primary" type="submit" style="width:100%">BUSCAR</button>
-                  </div> <!-- /.attribute_list -->
-                </fieldset></div>
-
-
-
-              </div>
-            </div><!-- /.tab-pane -->
-
-            <div id="repuestos" class="tab-pane">
-              <div class="product-tab sty-tabsh">
-
-                <div class="col-xs-3 col-sm-3 col-md-3"><fieldset class="attribute_fieldset">
-                  <label for="group_1" class="attribute_label attribute-key"><p>TIPO DE <b>CAMIÓN</b></p></label>
-                  <div class="attribute_list">
-                    <%= select :servicio,:type, options_for_select(@types.map{ |c| [c.name, c.link_rewrite, {'data-id'=>c.id}] }), {prompt: 'Todas las marcas'}, :class=>'form-control' %>
-
-
-                  </div> <!-- /.attribute_list -->
-                </fieldset></div>
-
-                <div class="col-xs-3 col-sm-3 col-md-3"><fieldset class="attribute_fieldset">
-                  <label for="group_1" class="attribute_label attribute-key"><p>TIPO DE <b>REPUESTOS</b></p></label>
-                  <div class="attribute_list">
-                    <%= collection_select(:servicio, :brand, BrandExtra.order(:id), :link_rewrite, :name, {prompt: 'Selecciona'}, :class=>'form-control') %>
-
-                  </div> <!-- /.attribute_list -->
-                </fieldset></div>
-
-                <div class="col-xs-3 col-sm-3 col-md-3"><fieldset class="attribute_fieldset">
-                  <label for="group_1" class="attribute_label attribute-key"><p>UBICACIÓN</p></label>
-                  <div class="attribute_list">
-                    <%= collection_select(:servicio, :state, State.order('name ASC'), :link_rewrite, :name, {prompt: 'Selecciona'}, :class=>'form-control') %>
-
-                  </div> <!-- /.attribute_list -->
-                </fieldset></div>
-
-                <div class="col-xs-3 col-sm-3 col-md-3"><fieldset class="attribute_fieldset">
-                  <label for="group_1" class="attribute_label attribute-key">&nbsp;</label>
-                  <div class="attribute_list pull-right" style="width:100%">
-                    <button class="btn btn-primary" type="button" style="width:100%" id="btn-repuesto">BUSCAR</button>
-                  </div> <!-- /.attribute_list -->
-                </fieldset></div>
-
-              </div><!-- /.product-tab -->
-            </div><!-- /.tab-pane -->
-
-            <div id="servicios" class="tab-pane">
-              <div class="product-tab sty-tabsh">
-
-                <div class="col-xs-4 col-sm-4 col-md-4"><fieldset class="attribute_fieldset">
-                  <label for="group_1" class="attribute_label attribute-key"><p>TIPO DE <b>SERVICIO</b></p></label>
-                  <div class="attribute_list">
-
-                    <%= collection_select(:state, :service, TypeService.order(:id), :link_rewrite, :name, {prompt: 'Selecciona'}, :class=>'form-control') %>
-                  </div> <!-- /.attribute_list -->
-                </fieldset></div>
-
-
-
-
-
-
-
-                <div class="col-xs-4 col-sm-4 col-md-4"><fieldset class="attribute_fieldset">
-                  <label for="group_1" class="attribute_label attribute-key"><p>UBICACIÓN</p></label>
-                  <div class="attribute_list">
-                    <%= collection_select(:servi, :state, State.order('name ASC'), :link_rewrite, :name, {prompt: 'Selecciona'}, :class=>'form-control') %>
-                  </div> <!-- /.attribute_list -->
-                </fieldset></div>
-
-                <div class="col-xs-4 col-sm-4 col-md-4"><fieldset class="attribute_fieldset">
-                  <label for="group_1" class="attribute_label attribute-key">&nbsp;</label>
-                  <div class="attribute_list pull-right" style="width:100%">
-                    <button class="btn btn-primary" type="button" style="width:100%" id="btn-servi">BUSCAR</button>
-                  </div> <!-- /.attribute_list -->
-                </fieldset></div>
-
-              </div><!-- /.product-tab -->
-            </div><!-- /.tab-pane -->
-
-          </div><!-- /.tab-content -->
-
-        </div><!-- /.product-tabs -->
-      </div><!-- /.logo-holder -->
     </div>
   </div><!-- /.top-search-holder -->
 </div><!-- /.top-cart-row -->
