se agrega paginacion para el filtro camiones y repuestos

--- a/app/views/pages/camiontipo.html.erb
+++ b/app/views/pages/camiontipo.html.erb
@@ -84,7 +84,7 @@
 
 
           </div><!-- /.tab-content -->
-<%= render partial: '/includes/paginator' %>
+<%= render partial: '/includes/paginator', locals: {object: @trucks} %>
 
         </div><!-- /.search-result-container -->
 
