--- a/app/views/pages/servicios.html.erb
+++ b/app/views/pages/servicios.html.erb
@@ -76,7 +76,7 @@
 
 
     </div><!-- /.tab-content -->
-<%= render partial: '/includes/paginator' %>
+<%= render partial: '/includes/paginator', locals:{object: @services} %>
 
   </div><!-- /.search-result-container -->
 
