--- a/app/views/pages/busqueda.html.erb
+++ b/app/views/pages/busqueda.html.erb
@@ -193,7 +193,7 @@
 
 
           </div><!-- /.tab-content -->
-<%= render partial: '/includes/paginator' %>
+        <%= render partial: '/includes/paginator', locals: {object: @services} %>
         </div><!-- /.search-result-container -->
 
       </div><!-- /.col -->
