--- a/app/views/pages/repuestos.html.erb
+++ b/app/views/pages/repuestos.html.erb
@@ -78,28 +78,7 @@
 
 
     </div><!-- /.tab-content -->
-    <div class="clearfix filters-container">
-      <div class="text-right">
-        <div class="pagination-container">
-          <% if !@extras.nil? %>
-              <% # paginate @extras %>
-          <% end %>
-
-
-
-          <ul class="list-inline list-unstyled">
-            <li class="prev"><a href="#"><i class="fa fa-angle-left"></i></a></li>
-            <li><a href="#">1</a></li>
-            <li class="active"><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li class="next"><a href="#"><i class="fa fa-angle-right"></i></a></li>
-          </ul><!-- /.list-inline -->
-        </div><!-- /.pagination-container -->						    </div><!-- /.text-right -->
-
-    </div><!-- /.filters-container -->
-
-  </div><!-- /.search-result-container -->
+    <%= render partial: '/includes/paginator', locals: {object: @extras} %>
 
 </div><!-- /.col -->
 </div><!-- /.row -->
