se arregl tamaño de imagenes en la busqueda

--- a/app/views/pages/repuestos.html.erb
+++ b/app/views/pages/repuestos.html.erb
@@ -34,7 +34,7 @@
                         <div class="product-image"><div class="image">
                           <a href="<%= repuesto_path(extra.id, extra.link_rewrite) %>">
 
-                            <%=  image_tag extra.picture1(:home ) %>
+                            <%=  image_tag extra.picture1(:home ), size: "300x200" %>
                           </a>
                         </div></div><!-- /.product-image -->
                         <div class="product-info text-left">
