se agrega la paginacion y ajuste de imagenes

--- a/app/views/pages/camiones.html.erb
+++ b/app/views/pages/camiones.html.erb
@@ -45,7 +45,7 @@
                       <div class="product-image"><div class="image">
                         <a href="<%= camion_path(truck.id, truck.link_rewrite) %>">
 
-                          <%= image_tag truck.picture1(:thumb ) %>
+                          <%= image_tag truck.picture1(:thumb ), size: "300x200" %>
                         </a>
                       </div></div><!-- /.product-image -->
                       <div class="product-info text-left">
