se mejora el codigo en la vista camiones

--- a/app/views/pages/servicios.html.erb
+++ b/app/views/pages/servicios.html.erb
@@ -34,7 +34,7 @@
                         <div class="product-image"><div class="image">
                           <a href="<%= servicio_path(servicio.id, servicio.link_rewrite) %>">
 
-                            <%=   image_tag servicio.picture1(:home ), size: "300x200" %>
+                            <%=   image_tag servicio.picture1(:thumb ) %>
                           </a>
                         </div></div><!-- /.product-image -->
                         <div class="product-info text-left">
