--- a/app/views/pages/camiones.html.haml
+++ b/app/views/pages/camiones.html.haml
@@ -1,10 +1,11 @@
 .breadcrumb
-  .container
-    .breadcrumb-inner
-      %ul.list-inline.list-unstyled
-        %li
-          %a{:href => "#"} Home
-        %li.active Volquetas
+.container
+  .breadcrumb-inner
+    %ul.list-inline.list-unstyled
+      %li
+        %a{:href => "/"} Home
+      %li /
+      %li.active Camiones
 .body-content.outer-top-xs
   .container
     .row.outer-bottom-sm
