se arregla bug en el filtro cuando los datos no estan completos

--- a/app/views/pages/camiones.html.haml
+++ b/app/views/pages/camiones.html.haml
@@ -33,8 +33,8 @@
                               %h3.name
                                 %a{:href => "#"}= truck.nombre
                               .description
-                                = truck.modelo
-                                | #{truck.state.name}
+                                - if truck.state
+                                  = "#{truck.modelo} | #{truck.state.name}"
                               .product-price
                                 %span.price= number_to_currency( truck.price,  precision: 0, delimiter: '.')
                             .cart.clearfix.animate-effect
