se mejora a busqueda de la barra superior

--- a/app/views/pages/busqueda.html.haml
+++ b/app/views/pages/busqueda.html.haml
@@ -23,4 +23,5 @@
                   %hr/
                 .row
                   %h2 Servicios
+                  = render partial: 'shared/list_services'
                   %hr/
