se agrega la vista para la busqueda por la categoria en los repuestos

--- a/app/views/includes/_type_extras.html.haml
+++ b/app/views/includes/_type_extras.html.haml
@@ -15,4 +15,4 @@
                     %ul.links.list-unstyled
                       - type.brand_extra.each do |brand|
                         %li
-                          %a{:href => "#"}= brand.name
+                          = link_to brand.name, "/repuesto-tipo/#{brand.id}"
