--- a/app/views/includes/_menu.html.haml
+++ b/app/views/includes/_menu.html.haml
@@ -34,10 +34,9 @@
                 .clearfix
       .col-xs-12.col-sm-12.col-md-6.top-search-holder{:style => "float:right"}
         .search-area
-          %form{controller: "pages", action: "busqueda", id: "form_search"}
-            .control-group
-              %a.search-button{:href => "#", onClick: "document.getElementById('form_search').submit();"}
-              %input.search-field{:name => "consulta", :placeholder => "Buscar camiones, repuestos o servicios..."}/
+          = form_tag('/busqueda', {id: "form_search"}) do
+            %a.search-button{:href => "#", onClick: "document.getElementById('form_search').submit();"}
+            %input.search-field{:name => "consulta", :placeholder => "Buscar camiones, repuestos o servicios..."}/
   .main-header.bgtoph
     .container
       .row
