se agrega el form de busqueda avazada en los servicios

--- a/app/views/pages/servicios.html.haml
+++ b/app/views/pages/servicios.html.haml
@@ -10,9 +10,9 @@
   .container
     .row.outer-bottom-sm
       .col-md-3.sidebar
-        = render 'includes/type_services'
+        = render 'shared/type_services'
         .sidebar-module-container
-          =# render 'includes/buscadoravanzado'
+          = render 'shared/form_seach_services'
       .col-md-9
         .search-result-container
           #myTabContent.tab-content
