--- a/app/views/pages/camiones.html.haml
+++ b/app/views/pages/camiones.html.haml
@@ -11,7 +11,7 @@
     .row.outer-bottom-sm
       .col-md-3.sidebar
         = render 'includes/eliminar'
-        = render 'includes/type_trucks'
+        = render 'shared/type_trucks'
         .sidebar-module-container
           = render 'includes/buscadoravanzado'
       .col-md-9
