se arregla el tema de la navegacion en la barra superior

--- a/app/views/includes/_menuint.html.haml
+++ b/app/views/includes/_menuint.html.haml
@@ -28,9 +28,9 @@
                   %li.active.dropdown.yamm-fw
                     %a{:href => "/"} Home
                   %li.dropdown
-                    %a{:href => "#"} Vende tu camión
+                    %a{:href => "/tarifas"} Vende tu camión
                   %li.dropdown
-                    %a{:href => "#"} Mis Anuncios
+                    %a{:href => "/mi-cuenta"} Mis Anuncios
                 .clearfix
       .col-xs-12.col-sm-12.col-md-6.top-search-holder{:style => "float:right"}
         .search-area
