--- a/app/views/shared/_form_seach_extras.html.haml
+++ b/app/views/shared/_form_seach_extras.html.haml
@@ -6,7 +6,7 @@
         %p
           NOMBRE
       .attribute_list
-        = f.search_field :name_cont, class: "form-control", placeholder: ""
+        = f.search_field :name_cont, class: "form-control", placeholder: "Buscar por nombre...", maxlength: 50
     %p
       %fieldset.attribute_fieldset
         %label.attribute_label.attribute-key{:for => "group_1"}
