se arregla bug en el partial de camiones

--- a/app/views/pages/camiontipo.html.haml
+++ b/app/views/pages/camiontipo.html.haml
@@ -10,7 +10,7 @@
   .container
     .row.outer-bottom-sm
       .col-md-3.sidebar
-        = render 'includes/type_trucks'
+        = render 'shared/type_trucks'
         .sidebar-module-container
       .col-md-9
         .search-result-container
