--- a/app/views/shared/_type_services.html.haml
+++ b/app/views/shared/_type_services.html.haml
@@ -6,4 +6,4 @@
     %ul.nav
       - @type_services.each do |type|
         %li.dropdown.menu-item
-          = link_to type.name, "/servicio-tipo/#{type.id}"
+          = link_to "#{type.name} <b>(#{type.total})</b>".html_safe, "/servicio-tipo/#{type.id}"
