--- a/app/views/pages/repuestos.html.haml
+++ b/app/views/pages/repuestos.html.haml
@@ -11,8 +11,9 @@
     .row.outer-bottom-sm
       .col-md-3.sidebar
         = render 'shared/type_extras'
-        .sidebar-module-container
-          = render 'shared/form_seach_extras'
+        = render "shared/buscadoravanzado_extras"
+        %hr
+        .sidebar-module-container 
       .col-md-9
         .search-result-container
           #myTabContent.tab-content
