seagrega nuevas formas de busqueda en los servicios

--- a/app/views/pages/servicios.html.haml
+++ b/app/views/pages/servicios.html.haml
@@ -11,8 +11,9 @@
     .row.outer-bottom-sm
       .col-md-3.sidebar
         = render 'shared/type_services'
+        = render "shared/buscadoravanzado_services"
+        %hr
         .sidebar-module-container
-          = render 'shared/form_seach_services'
       .col-md-9
         .search-result-container
           #myTabContent.tab-content
