--- a/app/views/admin/banners/index.html.erb
+++ b/app/views/admin/banners/index.html.erb
@@ -46,7 +46,7 @@
         </tr>
         </thead>
         <tbody>
-        <% @banners.each do |banner| %>
+        <% @banners_filter.each do |banner| %>
             <tr>
 
 
