--- a/app/views/admin/trucks/new.html.erb
+++ b/app/views/admin/trucks/new.html.erb
@@ -36,7 +36,7 @@
         <div class="col-md-6">
           <div class="form-group">
 
-            <%= f.label :nombre, 'Nombre de camion' %>
+            <%= f.label :nombre, 'Nombre de Vehiculo' %>
             <%= f.text_field :nombre, :class =>'form-control'  %>
           </div>
         </div>
