--- a/app/views/admin/trucks/edit.html.erb
+++ b/app/views/admin/trucks/edit.html.erb
@@ -61,7 +61,7 @@
             <div class="col-md-6">
               <div class="form-group">
 
-                <%= f.label :nombre, 'Nombre de camion' %>
+                <%= f.label :nombre, 'Nombre de Vehiculo' %>
                 <%= f.text_field :nombre, :class =>'form-control'  %>
               </div>
             </div>
@@ -864,10 +864,6 @@
                     <%= f.check_box :descansapies  %> Descansa pies
                   </label>
                   <br/>
-                  <label>
-                    <%= f.check_box :descansapies  %> Descansa pies
-                  </label>
-                  <br/>
 
 
                   <label>
@@ -1108,7 +1104,16 @@
                 </div>
               </div>
 
+              <div class="row">
+                <div class="col-md-12">
 
+                  <label>
+                      <%= f.check_box :unicodueno  %> Unico dueño
+                  </label>
+
+                  <br/><br/>
+                </div>
+              </div>
 
 
 
