--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -44,7 +44,7 @@
               <div class="col-md-6">
                 <div class="form-group">
 
-                  <%= f.label :nombre, 'Nombre de camion' %>
+                  <%= f.label :nombre, 'Nombre de Vehiculo' %>
                   <%= f.text_field :nombre, :class =>'form-control'  %>
                 </div>
               </div>
@@ -843,10 +843,6 @@
 
                   <div class="col-md-3">
 
-                    <label>
-                      <%= f.check_box :descansapies  %> Descansa pies
-                    </label>
-                    <br/>
                     <label>
                       <%= f.check_box :descansapies  %> Descansa pies
                     </label>
