--- a/app/views/shared/_type_extras.html.haml
+++ b/app/views/shared/_type_extras.html.haml
@@ -1,3 +1,6 @@
+- @toggle_search.each do |toggle|
+  = link_to toggle[0], "/servicio-toggle/#{toggle[1]}"
+  %br
 .side-menu.animate-dropdown.outer-bottom-xs
   .head
     %i.icon.fa.fa-align-justify.fa-fw
