se grega toggle a repuestos

--- a/app/views/shared/_type_extras.html.haml
+++ b/app/views/shared/_type_extras.html.haml
@@ -1,5 +1,5 @@
 - @toggle_search.each do |toggle|
-  = link_to toggle[0], "/servicio-toggle/#{toggle[1]}"
+  = link_to toggle[0], "/repuesto-toggle/#{toggle[1]}"
   %br
 .side-menu.animate-dropdown.outer-bottom-xs
   .head
