--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -1133,7 +1133,16 @@
                   </div>
                 </div>
 
+                <div class="row">
+                  <div class="col-md-12">
 
+                    <label>
+                      <%= f.check_box :unicodueno  %> Unico dueño
+                    </label>
+
+                    <br/><br/>
+                  </div>
+                </div>
 
 
 
