--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -74,10 +74,25 @@
 
               <div class="col-md-6">
                 <div class="form-group">
-                  <%= f.label :modelo, 'Modelo' %>
-                  <%= f.text_field :modelo, :class =>'form-control'  %>
+                  <%= f.label :brand_truck_id, 'Marca de camion' %>
+                  <%= f.collection_select :brand_truck_id, BrandTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
                 </div>
               </div>
+
+
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <%= f.label :modelo, 'Modelo' %>
+                    <%= f.text_field :modelo, :class =>'form-control'  %>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <%= f.label :referencia_id, 'Referencia' %>
+                    <%= f.collection_select :referencia_id, Referencia.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                  </div>
+                </div>
+
 
 
               <div class="col-md-6">
@@ -96,22 +111,11 @@
               </div>
 
 
-
-
             </div>
 
 
 
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :brand_truck_id, 'Marca de camion' %>
-                  <%= f.collection_select :brand_truck_id, BrandTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-                </div>
-              </div>
 
-
-            </div>
 
 
 
