--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -571,9 +571,7 @@
 
 
 
-
-
-            <!--Caminion 3-->
+<!--Caminion 3-->
             <% if params[:v] == '3' %>
 
 
@@ -734,7 +732,7 @@
 
 
 
-            <!--buses 4-->
+<!--buses 4-->
             <% if params[:v] == '4' %>
 
 
@@ -949,7 +947,7 @@
 
 
 
-<!-- trailers-->
+<!-- trailers 5-->
             <% if params[:v] == '5' %>
 
 
@@ -1079,8 +1077,7 @@
 
             <% end %>
 
-
-            <!--VANS-->
+<!--VANS 6-->
 
             <% if params[:v] == '6' %>
 
@@ -1154,10 +1151,6 @@
 
 
           <% end %>
-
-
-
-
 
 
             <div class="row">
